--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <title>First Assignment</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
