added third and fourth section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
 
-        <div class="first-image">
+         <div class="first-image">
             <div class="first-image-text">
                 <p class="first-image-text-pera">Happy New Year</p>
                 <h1 class="first-image-text-heading">New Year Party Celebration</h1>
             </div>
-          </div>
+         </div>
 
           <div>
             <h2 class="second-heading">65% OFF</h2>
@@ -30,7 +30,6 @@
           </div>
 
           <div class="third-section">
-
             <div>
                 <h2 class="third-section-heading">Welcome to midnight party</h2>
                 <p class="third-section-pera">Though i dont celebrate new year party but i am doing this for learning purpose. May be it will help me to become a web developer </p>
@@ -40,6 +39,15 @@
             <div>
                 <img class="third-section-image" src="B9A1-New-Year-New-Mission/resources/Group 70.png" alt="">
             </div>
+          </div>
+
+          <div class="forth-section">
+            <div class="fourth-section-text">
+                <h5 class="place"><span>Place:</span> New Park Hotel</h5>
+                <h5 class="date"><span>Date:</span> 31 December Night 2023</h5>
+                <h5 class="time"><span>Time:</span> Evening 7.30 pm to 12.30 am</h5>
+            </div>
+            <button class="fourth-section-button">JOIN NOW</button>
 
           </div>
 
