added fifth section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <p class="third-section-pera">Though i dont celebrate new year party but i am doing this for learning purpose. May be it will help me to become a web developer </p>
                 <h3 class="third-section-button">JOIN NOW</h3>
             </div>
-
             <div>
                 <img class="third-section-image" src="B9A1-New-Year-New-Mission/resources/Group 70.png" alt="">
             </div>
@@ -48,7 +47,22 @@
                 <h5 class="time"><span>Time:</span> Evening 7.30 pm to 12.30 am</h5>
             </div>
             <button class="fourth-section-button">JOIN NOW</button>
+          </div>
 
+          <div class="fifth-section">
+            <div class="fifth-section-first">
+                <h4 class="fift-first-heading">NEW BEST OFFER</h4>
+                <h3 class="fifth-second-heading">Coming Soon</h3>
+                <p class="fifth-pera">this is my fifth section where i am going to add total of three section. May be it will be difficult one for me but I will try my best. </p>
+            </div>
+            <div class="fifth-section-image">
+                <img src="B9A1-New-Year-New-Mission/resources/Ellipse 1.png" alt="">
+            </div>
+            <div class="fifth-section-third">
+                <h2 class="fifth-third-section">2024</h2>
+                <p class="fifth-third-section-pera">It is the third part paragraph of the fifth section which i am positioning and its really hard for me.</p>
+                <img class="fifth-third-section-image" src="B9A1-New-Year-New-Mission/resources/Group 96.png" alt="">
+            </div>
           </div>
 
 
