--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
                 <img class="fifth-third-section-image" src="B9A1-New-Year-New-Mission/resources/Group 96.png" alt="">
             </div>
           </div>
+          <div class="section-six">
+            <h3 class="section-six-one">THE BEST GIFTS</h3>
+            <h2 class="section-six-two">Our Awesome Portfolio</h2>
+            <p class="section-six-three">It is almost mid night in south korea and I am still strugling for completing my first assignment. </p>
+          </div>
+          <div class="portfolio">
+            <div class="portfolio-first-section">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 3.png" alt="">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 4.png" alt="">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 5.png" alt="">
+            </div>
+            <div class="portfolio-second-section">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 6.png" alt="">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 7.png" alt="">
+                <img src="B9A1-New-Year-New-Mission/images/Rectangle 8.png" alt="">
+            </div>
+          </div>
 
 
 </body>
