--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <h2 class="section-six-two">Our Awesome Portfolio</h2>
             <p class="section-six-three">It is almost mid night in south korea and I am still strugling for completing my first assignment. </p>
           </div>
+
           <div class="portfolio">
             <div class="portfolio-first-section">
                 <img src="B9A1-New-Year-New-Mission/images/Rectangle 3.png" alt="">
@@ -82,6 +83,45 @@
             </div>
           </div>
 
+          <div class="seventh-section">
+            <img src="B9A1-New-Year-New-Mission/resources/Group 61.png" alt="" class="seenth-section-icon">
+            <h2 class="seventh-section-heading">Subscribe Newsletter</h2>
+            <p class="seventh-section-pera">This is a newslatter section and it is my first newslatter section which I am doing with a lot of stress and I hope I will finish it within time. </p>
+            <div class="subscribe-button">
+                <input type="email" class="input-field">
+                <button class="main-button">Subscribe</button>
+            </div>
+          </div>
+
 
 </body>
+
+<footer class="footer-section">
+    <div class="footer-first-section">
+        <p class="footer-firts-pera">44, Big Building Roosevelt Street <br>
+            Beach Gardens Florida 33410</p>
+        <div>
+            <p class="footer-second-pera"> <img src="B9A1-New-Year-New-Mission/resources/Call.png" alt=""> +00 123 584 124</p>
+            <p class="footer-third-pera"> <img src="B9A1-New-Year-New-Mission/resources/Website.png" alt=""> www.website.com</p>
+
+        </div>
+        
+    </div>
+    <div class="footer-second-section">
+        <img src="B9A1-New-Year-New-Mission/resources/Facebook.png" alt="">
+        <img src="B9A1-New-Year-New-Mission/resources/Instagram.png" alt="">
+        <img src="B9A1-New-Year-New-Mission/resources/Linkedin.png" alt="">
+        <img src="B9A1-New-Year-New-Mission/resources/Twitter.png" alt="">
+
+    </div>
+    <div class="footer-third-section">
+        <p class="footer-fourth-pera">2017, All Rights Reserved.</p>
+        <p class="footer-fifth-pera">Unsubscribe</p>
+
+    </div>
+</footer>
+
+
+
+
 </html>
