--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
           <div class="third-section">
             <div>
-                <h2 class="third-section-heading">Welcome to midnight party</h2>
-                <p class="third-section-pera">Though i dont celebrate new year party but i am doing this for learning purpose. May be it will help me to become a web developer </p>
+                <h2 class="third-section-heading">Welcome to <br> midnight party</h2>
+                <p class="third-section-pera">Though i dont celebrate new year party but i am doing this <br>for learning purpose. May be it will help me to become a web developer </p>
                 <h3 class="third-section-button">JOIN NOW</h3>
             </div>
             <div>
@@ -86,7 +86,7 @@
           <div class="seventh-section">
             <img src="B9A1-New-Year-New-Mission/resources/Group 61.png" alt="" class="seenth-section-icon">
             <h2 class="seventh-section-heading">Subscribe Newsletter</h2>
-            <p class="seventh-section-pera">This is a newslatter section and it is my first newslatter section which I am doing with a lot of stress and I hope I will finish it within time. </p>
+            <p class="seventh-section-pera">This is a newslatter section and it is my first newslatter section which <br> I am doing with a lot of stress and I hope I will finish it within time. </p>
             <div class="subscribe-button">
                 <input type="email" class="input-field">
                 <button class="main-button">Subscribe</button>
@@ -104,9 +104,9 @@
             <p class="footer-second-pera"> <img src="B9A1-New-Year-New-Mission/resources/Call.png" alt=""> +00 123 584 124</p>
             <p class="footer-third-pera"> <img src="B9A1-New-Year-New-Mission/resources/Website.png" alt=""> www.website.com</p>
 
-        </div>
-        
+        </div>  
     </div>
+    <hr class="solid">
     <div class="footer-second-section">
         <img src="B9A1-New-Year-New-Mission/resources/Facebook.png" alt="">
         <img src="B9A1-New-Year-New-Mission/resources/Instagram.png" alt="">
@@ -114,6 +114,7 @@
         <img src="B9A1-New-Year-New-Mission/resources/Twitter.png" alt="">
 
     </div>
+    <hr class="solid">
     <div class="footer-third-section">
         <p class="footer-fourth-pera">2017, All Rights Reserved.</p>
         <p class="footer-fifth-pera">Unsubscribe</p>
